syntax = "proto3";

package users.v1;

import "google/protobuf/timestamp.proto";

option go_package = "/gen";

message User {
  string id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
  bool email_verified = 5;
  bool is_guest = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

service UserService {
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message GetUserByIDRequest {
  string id = 1;
}
message GetUserByIDResponse {
  User user = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  User user = 1;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {}
